# fcr2017_ws

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/explore/: CMakeLists.txt  README.md  package.xml
src/explore/include/: explore.h  navigation.h  teleport.h
src/explore/include/movement/: navigation.h  pid.h
src/explore/src/: explore.cpp  kinematics.cpp  main.cpp  navigation.cpp  teleport.cpp
src/fcr2017/: CMakeLists.txt
src/fcr2017/launch/: pioneer3at.gazebo.launch  pioneer3at_empty.gazebo.launch  pioneer3at_empty_world.gazebo.launch
src/fcr2017/worlds/cic/: cic.world
src/forward_kinematics/: CMakeLists.txt  ForwardKin.cpp  README.md  forward_kinematics.cpp  package.xml
src/forward_kinematics/lib/: ForwardKin.h  ForwardKin.hpp
src/forward_kinematics/src/: ForwardKin.cpp
src/inverse_kinematics/: CMakeLists.txt  README.md  inverse_kinematics.cpp  package.xml
src/inverse_kinematics/lib/: InversedKin.hpp
src/inverse_kinematics/src/: InversedKin.cpp
src/mapping/: CMakeLists.txt  package.xml
src/mapping/config/: simple_demo.yaml
src/mapping/include/: grid_map.h  grid_mapping.h  laser_monitor.py
src/mapping/include/measurements/: odometry_subscriber.h
src/mapping/include/namespaces/: parameters.h
src/mapping/launch/: fcr_mapping.gazebo.launch  mapping.launch  pioneer.gazebo.launch  simple_demo.launch
src/mapping/scripts/: cic_map.py  dijkstra.py  graph.py  talker.py
src/mapping/scripts/topological/: cic_map.py  dijkstra.py  graph.py  topological_map.py  topological_node.py
src/mapping/src/: grid_map_node.cpp  grid_mapping.cpp  laser_subscriber.cpp  odometry_subscriber.cpp
src/mapping/src/grid_map/: grid_2d.py  grid_map.py  grid_map_node.py  laser_monitor.py  layer.py  odometry_monitor.py  topological_monitor.py
src/mapping/src/topological/: cic_map.py  dijkstra.py  graph.py  topological_map.py  topological_node.py
src/navigation/: CMakeLists.txt  README.md  package.xml
src/navigation/include/: angleOps.h  laser_subscriber.h  movement.h  navigation.h  parameters.h  ultrasound_subscriber.h
src/navigation/include/measurements/: laser_subscriber.h  odometry_subscriber.h  ultrasound_subscriber.h
src/navigation/include/movement/: kinematics.h  movement.h  pid.h
src/navigation/include/namespaces/: angleOps.h  parameters.h
src/navigation/src/: kinematics.cpp  laser_subscriber.cpp  main.cpp  movement.cpp  navigation.cpp  odometry_subscriber.cpp  pid.cpp  ultrasound_subscriber.cpp
src/topological_localization/: CMakeLists.txt  package.xml
src/topological_localization/lauch/: fcr2017_localization.launch  localization.launch
src/topological_localization/launch/: fcr2017_localization.launch
src/topological_localization/msg/: LocalizationFeatures.msg
src/topological_localization/src/line_features/: line_features.py  line_features_node.py
src/topological_localization/src/localization/: cic_probabilities.py  localization.py  localization_node.py  plots.py
